user management modules

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -18669,5 +18669,19 @@ div.tagsinput {
       border: none;
       width: 80%;
       margin: auto; }
+      
+      .card-avatar{
+            max-width: 180px;
+            max-height: 180px;
+            margin: -50px auto 0;
+            border-radius: 50%;
+            overflow: hidden;
+            box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+
+        }
+        .card-avatar>img {
+            max-height: 100%;
+            max-width: 100%;
+        }
 
 /*# sourceMappingURL=style.css.map */
